[autofill] Add address comparison/merge logic for dependent locality and sorting codes

BUG=664540

Review-Url: https://codereview.chromium.org/2493253002
Cr-Commit-Position: refs/heads/master@{#433647}

Former-commit-id: 64fdf583b9fbbe70b65928344713ac07c3e53f35